--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev_build": "webpack --config webpack.dev.config.js"
+    "dev_build": "webpack --config webpack.dev.config.js",
+    "start:dev": "webpack-dev-server --config webpack.dev.config.js",
+    "start:prod": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,7 +25,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "react-router": "^4.3.1",
